# BFVyze

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  resource.rc
include/: Constants.h  HotkeyManager.h  IPCClient.h  OverlayWindow.h
include/core/: CheaterCountManager.h  Constants.h
include/global/: GlobalState.h
include/input/: HotkeyManager.h  IPCClient.h
include/ipc/: IPCManager.h  PythonBackendController.h  ZMQClient.h  ZMQMessageFormatter.h  ZMQMessageParser.h
include/overlay/: OverlayController.h  OverlayWindow.h
include/screenshot/: ImageProcessor.h  ImageSaver.h  ScreenCapturer.h  ScreenshotCapturer.h  ScreenshotManager.h  ScreenshotOrchestrator.h  ScreenshotProcessor.h  ScreenshotSaver.h
python/: main.py  requirements.txt  setup.py
python/api/: cheater_count_fetcher.py
python/ocr/: ocr_processor.py
python/python-3.13.2-embed-amd64/: python313._pth
python/src/: main.py
python/src/api/: server_id_resolver.py
python/src/ocr/: ocr_processor.py
python/src/zmq_comm/: screenshot_receiver.py
src/: HotkeyManager.cpp  IPCClient.cpp  OverlayWindow.cpp  main.cpp
src/core/: CheaterCountManager.cpp
src/global/: GlobalState.cpp
src/input/: HotkeyManager.cpp  IPCClient.cpp
src/ipc/: IPCManager.cpp  PythonBackendController.cpp  ZMQClient.cpp  ZMQMessageFormatter.cpp  ZMQMessageParser.cpp
src/overlay/: OverlayController.cpp  OverlayWindow.cpp
src/screenshot/: ImageProcessor.cpp  ImageSaver.cpp  ScreenCapturer.cpp  ScreenshotCapturer.cpp  ScreenshotManager.cpp  ScreenshotOrchestrator.cpp  ScreenshotProcessor.cpp  ScreenshotSaver.cpp
